--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property='og:title' content='Moodboard by Peanuto'/>
+    <meta property='og:image' content='%PUBLIC_URL%/galaxybottle.gif'/>
+    <meta property='og:description' content='A moodboard generator built with React.js'/>
+    <meta property='og:url' content='https://moodboard-react-by-peanuto.netlify.app/'/>
+    <meta property='og:image:width' content='500' />
+    <meta property='og:image:height' content='500' />
+
     <link rel="icon" href="%PUBLIC_URL%/galaxybottle.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
