--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta property='og:title' content='Moodboard by Peanuto'/>
-    <meta property='og:image' content='%PUBLIC_URL%/galaxybottle.gif'/>
+    <meta property='og:image' content='https://i.ibb.co/1GPHg7m/galaxybottle.gif'/>
     <meta property='og:description' content='A moodboard generator built with React.js'/>
     <meta property='og:url' content='https://moodboard-react-by-peanuto.netlify.app/'/>
     <meta property='og:image:width' content='500' />
